scenarios/03-multi-listener/https-tls-shared-port/32-backend-b-tlsroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: backend-b-mtls-route
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: https-tls-same-port-gateway
      namespace: gateway-system
      sectionName: tls
  hostnames:
    - mtls-b.example.test
  rules:
    - backendRefs:
        - name: backend-mtls
          port: 9443
